--- a/src/index.css
+++ b/src/index.css
@@ -96,7 +96,7 @@ hr {
   justify-content: center;
 }
 
-.question-content .vertical-separator {
+.vertical-separator {
   border: 1px solid #ddd;
 }
 
@@ -123,6 +123,65 @@ hr {
 .selected-icon {
   display: flex;
   float: right;
+}
+
+.leaderboard-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.author-card-wrapper {
+  margin: 20px;
+  max-width: 500px;
+}
+
+.author-card {
+  padding: 20px;
+}
+
+.author-card .info-container {
+  display: flex;
+}
+
+.first-position {
+  font-size: small;
+  background-color: gold;
+  border-radius: 50%;
+  padding: 5px;
+  width: 20px;
+  height: 20px;
+  margin: 9px 10px 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.second-position {
+  font-size: small;
+  background-color: silver;
+  border-radius: 50%;
+  padding: 5px;
+  width: 20px;
+  height: 20px;
+  margin: 9px 10px 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.third-position {
+  font-size: small;
+  background-color: #b87333;
+  border-radius: 50%;
+  padding: 5px;
+  width: 20px;
+  height: 20px;
+  margin: 9px 10px 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .active {
